clone bgiframe from brandon repo

--- a/demo/index.html
+++ b/demo/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="../src/css/jquery.tiny-lightbox.css" type="text/css" media="screen" />
 
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.js"></script>
-	<script type="text/javascript" src="../src/js/jquery.bgiframe.js"></script>
+	<script type="text/javascript" src="../external/bgiframe/jquery.bgiframe.js"></script>
 	<script type="text/javascript" src="../src/js/jquery.tinyLightbox.js"></script>
 	<script type="text/javascript" src="../src/js/jquery.tinyLightbox.original.js"></script>
 	<script type="text/javascript" src="../src/js/jquery.tinyLightbox.parallel.js"></script>
