--- a/demo/index.html
+++ b/demo/index.html
@@ -30,7 +30,7 @@
     </a>
 
 
-    <a href="http://farm3.static.flickr.com/2574/3912427047_07589b4527.jpg" title="2 tes  tesagas afgadsfg adfhaadf asdfa sdf asdfasdfasdf asd asdfasdf asdfasdfsdaf asfgasf asfgadghwrt ujrtjksdg sdghsdafgh ndf" rel ="sounds/yippee.wav"title="tes  tesagas afgadsfg adfhaadf asdfa sdf asdfasdfasdf asd asdfasdf asdfasdfsdaf asfgasf asfgadghwrt ujrtjksdg sdghsdafgh ndf" >
+    <a href="http://farm3.static.flickr.com/2574/3912427047_07589b4527.jpg" title="2 tes  tesagas afgadsfg adfhaadf asdfa sdf asdfasdfasdf asd asdfasdf asdfasdfsdaf asfgasf asfgadghwrt ujrtjksdg sdghsdafgh ndf" >
     	<img src="http://farm3.static.flickr.com/2449/3912423497_be43ba2d32_s.jpg" />
     </a>
 
@@ -49,7 +49,7 @@
     </a>
 
 
-    <a href="http://farm3.static.flickr.com/2574/3912427047_07589b4527.jpg" title="2 tes  tesagas afgadsfg adfhaadf asdfa sdf asdfasdfasdf asd asdfasdf asdfasdfsdaf asfgasf asfgadghwrt ujrtjksdg sdghsdafgh ndf" rel ="sounds/yippee.wav"title="tes  tesagas afgadsfg adfhaadf asdfa sdf asdfasdfasdf asd asdfasdf asdfasdfsdaf asfgasf asfgadghwrt ujrtjksdg sdghsdafgh ndf" >
+    <a href="http://farm3.static.flickr.com/2574/3912427047_07589b4527.jpg" title="tes  tesagas afgadsfg adfhaadf asdfa sdf asdfasdfasdf asd asdfasdf asdfasdfsdaf asfgasf asfgadghwrt ujrtjksdg sdghsdafgh ndf" >
     	<img src="http://farm3.static.flickr.com/2449/3912423497_be43ba2d32_s.jpg" />
     </a>
 
@@ -59,11 +59,35 @@
 
 </div>
 
+<h3>Using array instead of markup</h3>
+
+<div id="with-array">
+    <a href="http://farm4.static.flickr.com/3457/3913212374_622bf8e441.jpg" title="" >
+        <img src="http://farm3.static.flickr.com/2644/3913212896_d77fd740c9_s.jpg"/>
+    </a>
+</div>
 
 
 <script type="text/javascript">
 	$('#original').tinyLightbox();
 	$('#parallel').tinyLightbox({animation: 'parallel', speed: 400});
+    $('#with-array').tinyLightbox({
+        data: [
+            {
+                url: 'http://farm4.static.flickr.com/3509/3912427039_a79b87119a.jpg',
+                descr: '1 tes  tesagas afgadsfg adfhaadf asdfa sdf asdfasdfasdf asd asdfasdf asdfasdfsdaf asfgasf asfgadghwrt ujrtjksdg sdghsdafgh ndf'
+            },
+            {
+                url: 'http://farm3.static.flickr.com/2574/3912427047_07589b4527.jpg',
+                descr: '2tes  tesagas afgadsfg adfhaadf asdfa sdf asdfasdfasdf asd asdfasdf asdfasdfsdaf asfgasf asfgadghwrt ujrtjksdg sdghsdafgh ndf'
+            },
+            {
+                url: 'http://farm4.static.flickr.com/3457/3913212374_622bf8e441.jpg'
+            }
+
+        ]
+    });
+
 </script>
 
 </body>
