remove IE6 compatibility, rename, make it jquery 1.9 compatible

--- a/demo/index.html
+++ b/demo/index.html
@@ -6,11 +6,10 @@
 	<title>TinyLightbox</title>
 	<link rel="stylesheet" href="../lib/css/jquery.tiny-lightbox.css" type="text/css" media="screen" />
 
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.js"></script>
-	<script type="text/javascript" src="../external/bgiframe/jquery.bgiframe.js"></script>
-	<script type="text/javascript" src="../lib/js/jquery.tinyLightbox.js"></script>
-	<script type="text/javascript" src="../lib/js/jquery.tinyLightbox.original.js"></script>
-	<script type="text/javascript" src="../lib/js/jquery.tinyLightbox.parallel.js"></script>
+	<script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+	<script type="text/javascript" src="../lib/js/jquery.tiny-lightbox.js"></script>
+	<script type="text/javascript" src="../lib/js/jquery.tiny-lightbox.original.js"></script>
+	<script type="text/javascript" src="../lib/js/jquery.tiny-lightbox.parallel.js"></script>
 	<style>
 		body{
 			height: 2000px;
